# mesh

./: .env.example  .gitignore  LICENSE  Makefile  README.md  WORKFLOW.md  go.mod  go.sum  lefthook.yml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/prompts/: base_system.md
agent/src/mesh_agent/: __init__.py  __main__.py  events.py  git.py  jira_client.py  main.py  prompt.py  sdk_config.py  session.py  state_checker.py  types.py
agent/src/mesh_agent/tools/: __init__.py  github_tools.py  jira_tools.py
agent/tests/: conftest.py  test_events.py  test_git.py  test_github_tools.py  test_jira_client.py  test_jira_tools.py  test_main.py  test_prompt.py  test_sdk_config.py  test_session.py  test_state_checker.py
cmd/mesh/: main.go
internal/config/: dotenv.go  loader.go  loader_test.go  resolve.go  service_config.go  service_config_test.go  validation.go  validation_test.go  watcher.go  watcher_test.go
internal/logging/: logger.go  logger_test.go
internal/model/: errors.go  issue.go  issue_test.go  state.go  state_test.go  workflow.go
internal/orchestrator/: dispatch.go  dispatch_test.go  eligibility.go  events.go  orchestrator.go  orchestrator_test.go  reconcile.go  retry.go
internal/prompts/: embed.go  system.md
internal/proxy/: config.tmpl  github.go  github_handler.go  github_handler_test.go  github_test.go  proxy.go  proxy_test.go
internal/runner/: docker.go  docker_test.go  events.go
internal/sentry/: sentry.go  sentry_test.go
internal/server/: dashboard.go  server.go  server_test.go
internal/template/: render.go  (+1 more)
(+25 files in other folders)
